...
        return Center();
      }
      if (state is AttendanceSuccess) {
        MonthAttendance attendance = state.data;
        return Scaffold(
            backgroundColor: AppColors.BACKGROUND_COLOR,
            appBar: AppBar(title: AppBarWidget(pageName: "My Attendance")),
            drawer: Navigation(),
            body: SafeArea(
              child: SingleChildScrollView(
                  child: StickyHeader(
                header: Month(monthAttendance: state.data),
                content: Column(children: <Widget>[
...
