...
              setState(() {
                uploading = true;
                Navigator.of(context).pop();
              });
            },
            child: Text(
              'OK',
              style: TextStyle(fontSize: 20),
            ))
      ],
    );
    showDialog(
        context: context,
...
